# nova_robot

./: CMakeLists.txt  README.md  package.xml
launch/: description.launch
meshes/: EyeBrow.stl  Head.stl  Laser.stl  LaserArm.stl  LowerArm.stl  Lower_Body.stl  Rear_Wheel.stl  Shoulder_Left.stl  Shoulder_Right.stl  ThirdArm.stl  Tread_Left.stl  Tread_Right.stl  UpperArm_Left.stl  UpperArm_Right.stl  Upper_Body.stl
xacro/: j5.xacro  materials.xacro  model.xacro
